--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -17,6 +17,8 @@
         android:ems="10"
         android:hint="@string/editText_addOption_hint"
         android:inputType="text"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintEnd_toStartOf="@+id/button_addOption"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
