--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,8 +15,9 @@
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_title"
+        app:layout_constraintTop_toBottomOf="@+id/textView_title"
         tools:text="Result" />
 
     <com.example.decisionmaker.views.Roulette
@@ -35,6 +36,7 @@
 
     <Button
         android:id="@+id/button_spin"
+        style="@style/Theme.DecisionMaker"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -45,18 +47,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/roulette" />
 
-    <EditText
-        android:id="@+id/editText_title"
+    <TextView
+        android:id="@+id/textView_title"
+        style="@style/Theme.DecisionMaker.TextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="@android:color/transparent"
-        android:cursorVisible="false"
-        android:ems="10"
-        android:hint="@string/editText_title_hint"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
+        android:fontFamily="sans-serif-light"
         android:textAlignment="center"
+        android:textSize="40sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/roulette"
         app:layout_constraintTop_toTopOf="parent" />
