--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_result"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_result" />
 
     <Button
         android:id="@+id/button_spin"
+        style="@style/Theme.DecisionMaker"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -37,25 +37,25 @@
         android:id="@+id/textView_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_title"
+        app:layout_constraintTop_toBottomOf="@+id/textView_title"
         tools:text="Result" />
 
-    <EditText
-        android:id="@+id/editText_title"
+    <TextView
+        android:id="@+id/textView_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:backgroundTint="@android:color/transparent"
-        android:ems="10"
-        android:hint="@string/editText_title_hint"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
+        android:textSize="40sp"
+        android:textStyle="bold|italic"
+        android:fontFamily="sans-serif-light"
         android:textAlignment="center"
+        style="@style/Theme.DecisionMaker.TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
