--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,5 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_modify"
-        android:title="@string/menu_modify_text" />
+        android:icon="@drawable/ic_action_edit"
+        android:title="@string/menu_modify_text"
+        app:showAsAction="ifRoom" />
 </menu>
