--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,29 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DecisionMaker" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.DecisionMaker" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowLightStatusBar">false</item>
         <!-- Customize your theme here. -->
+
+        <item name="backgroundTint">@color/white</item>
     </style>
+
+    <style name="Theme.DecisionMaker.IconTint">
+        <item name="tint">@color/white</item>
+        <item name="iconTint">@color/white</item>
+    </style>
+
+    <style name="Theme.DecisionMaker.TextView">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
