--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:windowLightStatusBar">false</item>
         <!-- Customize your theme here. -->
+    </style>
 
+    <style name="Theme.DecisionMaker.TextButton">
         <item name="backgroundTint">@color/white</item>
     </style>
 
