--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,10 @@
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
 
+
+    </style>
+
+    <style name="Theme.DecisionMaker.TextButton">
         <item name="backgroundTint">@color/black</item>
     </style>
 
