Bring back clearOptions button. Update colorSecondary and assign it to outer roulette (dark theme included). Avoid empty options (white space) and trim input strings. Screen orientation for share/search buttons and roulette title. Slighty change in the SHARE output text

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -67,6 +67,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/button_search_desc"
         android:scaleType="fitCenter"
         android:src="@drawable/searchgoogle"
         android:visibility="invisible"
@@ -80,6 +81,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="12dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/button_share_desc"
         android:scaleType="fitCenter"
         android:src="@drawable/share"
         android:visibility="invisible"
