--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/button_search_desc"
         android:scaleType="fitCenter"
         android:src="@drawable/searchgoogle"
         android:visibility="invisible"
@@ -81,6 +82,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="12dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/button_share_desc"
         android:scaleType="fitCenter"
         android:src="@drawable/share"
         android:visibility="invisible"
