Add MyRoulettesActivity, to store many roulettes. Now is possible to add new roulettes or edit one with AddEditFragment. ViewModel class to introduce MVVM to the project. Saving data in Shared Preferences. Delete by swapping.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/transparent"
     tools:context=".MainActivity">
 
-    <com.example.decisionmaker.views.Roulette
+    <com.example.decisionmaker.views.RouletteView
         android:id="@+id/roulette"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -89,5 +89,14 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView_result"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintTop_toTopOf="@+id/textView_result" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
