--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_title"
         tools:text="Result" />
 
-    <com.example.decisionmaker.views.Roulette
+    <com.example.decisionmaker.views.RouletteView
         android:id="@+id/roulette"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -88,5 +88,14 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView_result"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintTop_toTopOf="@+id/textView_result" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
