--- a/app/src/main/res/layout-land/fragment_add_edit.xml
+++ b/app/src/main/res/layout-land/fragment_add_edit.xml
@@ -2,28 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OptionsActivity">
+    android:scrollbars="vertical"
+    tools:context=".AddEditFragment">
 
     <Button
         android:id="@+id/button_clearTitle"
         style="@style/Theme.DecisionMaker.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="24dp"
         android:text="@string/menu_clear"
         app:layout_constraintBottom_toBottomOf="@+id/editText_RouletteTitle"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editText_RouletteTitle"
+        app:layout_constraintEnd_toStartOf="@+id/editText_addOption"
         app:layout_constraintTop_toTopOf="@+id/editText_RouletteTitle" />
 
     <EditText
         android:id="@+id/editText_RouletteTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
         android:autofillHints=""
         android:ems="10"
         android:focusable="true"
@@ -38,40 +41,38 @@
         android:id="@+id/editText_addOption"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="8dp"
         android:autofillHints=""
         android:ems="10"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="@string/editText_addOption_hint"
         android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="@+id/button_addOption"
         app:layout_constraintEnd_toStartOf="@+id/button_addOption"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_RouletteTitle" />
+        app:layout_constraintTop_toTopOf="@+id/button_addOption" />
 
     <Button
         android:id="@+id/button_addOption"
         style="@style/Theme.DecisionMaker.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/button_addOption"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_addOption"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText_addOption" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/options_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/floatButton_ready"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_addOption" />
 
@@ -86,6 +87,7 @@
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_done_black_18dp" />
+        app:srcCompat="@drawable/ic_done"
+        style="@style/Theme.DecisionMaker.IconTint"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
