Update Kotlin version. Due to deprecation and google recommendations: a)migrate jCenter to mavenCentral. b)Change synthetic and findViewById imports to View Binding. Fix bug with roulette and sound when orientation changes or exit app, now stop animation in those cases.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,8 @@
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Title" />
 
     <ImageButton
         android:id="@+id/search_button"
