--- a/app/src/main/res/layout/activity_my_roulettes.xml
+++ b/app/src/main/res/layout/activity_my_roulettes.xml
@@ -4,13 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     tools:context=".MyRoulettesActivity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_my_roulettes"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/roulette_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
