--- a/app/src/main/res/layout-land/fragment_add_edit.xml
+++ b/app/src/main/res/layout-land/fragment_add_edit.xml
@@ -27,12 +27,12 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:autofillHints=""
         android:ems="10"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="@string/editText_title_hint"
         android:inputType="text"
+        android:maxLength="100"
         app:layout_constraintEnd_toStartOf="@+id/button_clearTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,12 +42,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:autofillHints=""
         android:ems="10"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="@string/editText_addOption_hint"
         android:inputType="text"
+        android:maxLength="50"
         app:layout_constraintBottom_toBottomOf="@+id/button_addOption"
         app:layout_constraintEnd_toStartOf="@+id/button_addOption"
         app:layout_constraintTop_toTopOf="@+id/button_addOption" />
