Add an icon to the App. Add feature to spin the Roulette when moving the device. Add SettingsActivity and make it actually work for: Sound and Shake configurations (on/off).

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -13,4 +13,8 @@
         style="@style/Theme.DecisionMaker.IconTint"
         android:title="@string/menutitle_showRoulettes"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_settings"
+        android:title="@string/title_activity_settings"
+        app:showAsAction="never" />
 </menu>
