--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:windowLightStatusBar">false</item>
         <!-- Customize your theme here. -->
+        <item name="alertDialogTheme">@style/AlertDialogCustom</item>
     </style>
 
     <style name="Theme.DecisionMaker.TextButton">
@@ -26,6 +27,15 @@
 
     <style name="Theme.DecisionMaker.TextView">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AlertDialogCustom" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="buttonBarNegativeButtonStyle">@style/buttonNegative</item>
+    </style>
+
+    <style name="buttonNegative">
+        <item name="android:textColor">@color/purple_200</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 </resources>
